Convert confusion matrix to quarto

--- a/analysis/raisin_classification_analysis.qmd
+++ b/analysis/raisin_classification_analysis.qmd
@@ -22,9 +22,12 @@ format:
 bibliography: references.bib
 ---
 
-
-
-
+```{python}
+#| echo: false
+import pandas as pd
+from IPython.display import Markdown, display
+from tabulate import tabulate
+```
 
 ## Summary:
 Here, we are attempting to build a classification model using the logistic regression algorithm which use data derived from images of raisins to predict raisin varieties, specifically Bensi and Kecimen. From our model, we can see that many of the size-related features like `Area`, `Perimeter`, `MajorAxisLength`, and `ConvexArea` are strongly related. This means that these features are redundant, and show up more than other features. Other features like `Eccentricity` and `Extent` give us a more unique shape information of the raisin. We can also see from the summary statistics table that our dataset has a wide range of variability in size, therefore, size by itself may distinguish classes but shape metrics could help us refine classification better. With an `accuracy` score of $0.876$ and an `F1` score of $0.875$, we can see that our classifier performs well, and since both values are close to one another, we can assume that the class is balanced and not heavily skewed. With our heatmap, we can see a strong correlation between the size feature, which is likely to dominate the classifier's decision. This, however, could be a caveat. Since many of our features are highly correlated, our model may be overfitting and/or relying on redundant features. <br>
@@ -301,18 +304,11 @@ accuracy
 ```
 
 # Results and Discussion
-We can see that the dataset is quite balanced and our confusion matrix shows that the model correctly predicts more kecimen raisins than besni. We may improve this model with more samples, hyperparameter optimization, and feature engineering.
+We can see that the dataset is quite balanced, as shown in @fig-logreg-conf-matrix which  indicates that the model correctly predicts more kecimen raisins than besni. We may improve this model with more samples, hyperparameter optimization, and feature engineering.
 
-```{python}
-from sklearn.metrics import ConfusionMatrixDisplay
-import matplotlib.pyplot as plt
+![Confusion matrix of the LogisticRegression model.](../results/models/raisin_model_confusion_matrix.png){#fig-logreg-conf-matrix}
 
-cm_display = ConfusionMatrixDisplay.from_estimator(clf, X_test, y_test)
-plt.title("Confusion Matrix of the Logistic Regression Model")
-plt.show()
-```
-
-*Fig. 6 Confusion matrix of the LogisticRegression model*
+Figure: Confusion matrix of the LogisticRegression model
 
 ```{python}
 from sklearn.metrics import f1_score
