--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1,3 +1,12 @@
+@misc{cinar2019raisin,
+  author = {İ̇lkay Çinar and Murat Koklu and Sakir Tasdemir},
+  title = {Raisin Dataset},
+  howpublished = {\url{https://archive.ics.uci.edu/dataset/850/raisin}},
+  year = {2019},
+  note = {Accessed: 2025-12-05}
+}
+
+
 @article{charvet2016snack,
   title={A comparison of snack serving sizes to USDA guidelines in healthy weight and overweight minority preschool children enrolled in Head Start},
   author={Charvet, A and Hartlieb, K Brogan and Yeh, Ya-Chi and others},
